syntax = "proto3";

package api.customer;

import "google/api/annotations.proto";

option go_package = "customer/api/customer;customer";
option java_multiple_files = true;
option java_package = "api.customer";

service Customer {
	rpc GetVerifyCode (GetVerifyCodeReq) returns (GetVerifyCodeResp){
		option (google.api.http) = {
			get: "/customer/get-verify-code/{telephone}"
		};
	}
}

message GetVerifyCodeReq{
		string telephone = 1;
}

message GetVerifyCodeResp{
		int32 code = 1;
		string message = 2;
		string verify_code = 3;
		int64 verify_code_time = 4;
		int32 verify_code_life = 5;
}