syntax = "proto3";

package api.verifyCode;

option go_package = "verifyCode/api/verifyCode;verifyCode";
option java_multiple_files = true;
option java_package = "api.verifyCode";

service VerifyCode {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
}

// 定义一个枚举类型，用于表示字符的类型
enum TYPE {
  // 默认值，不属于任何特定类型
  DEFAULT = 0;
  // 数字字符
  DIGIT = 1;
  // 字母字符
  LETTER = 2;
  // 混合字符，即既包含数字也包含字母
  MIXED = 3;
}

// 请求参数结构
message GetVerifyCodeRequest {
	int64 length = 1;
	TYPE type = 2;
}

// 响应返回结构
message GetVerifyCodeReply {
	string code = 1;
}
